--- a/themes/custom/entyviohcp/templates/content/node--patient-resources--full.html.twig
+++ b/themes/custom/entyviohcp/templates/content/node--patient-resources--full.html.twig
@@ -1,2 +1,187 @@
 {{ attach_library('entyviohcp/patient-resources-styling') }}
-<h3 style="margin-top: 300px">patient-resources</h3>
+<div  class="page-content resources-content" data-page-id="PatientResources" data-page-category="Resources">
+                <div id="skip-to-content"></div>
+                <!-- ************************* -->
+                <!-- **** CODE STARTS **** *** -->
+                <!-- ************************* -->
+
+
+
+
+
+<div id="hero">
+    <div>
+
+            <picture>
+                <source media="screen and (max-width: 959px)" srcset="{{ base_path ~ directory }}/images/hero/mobile-resources-patient.png">
+                <source media="screen and (max-width: 9999px) and (min-width: 960px)" srcset="{{ base_path ~ directory }}/images/hero/desktop-resources-patient.png">
+                <img src="{{ base_path ~ directory }}/images/hero/desktop-resources-patient.png" alt="Patient.">
+            </picture>
+                <article>
+                    <div>
+                        <h1>
+                            Resources
+                        </h1>
+                    </div>
+
+                    <div>
+                        <h2>Information<br> to Help You<br> and Your Patients</h2>
+                    </div>
+                </article>
+            <picture>
+                <source media="screen and (max-width: 959px)" srcset="{{ base_path ~ directory }}/images/hero/mobile-resources-stu.png">
+                <source media="screen and (max-width: 9999px) and (min-width: 960px)" srcset="{{ base_path ~ directory }}/images/hero/desktop-resources-stu.png">
+                <img src="{{ base_path ~ directory }}/images/hero/desktop-resources-stu.png" alt="Healthcare professional.">
+            </picture>
+
+
+
+                            </div>
+</div>
+
+<div id="first_section">
+    <div id="indication_bar" class="close">
+	<div>
+		<div class="section">
+			<h3>For adult patients with moderately to severely active UC or CD when other therapies have not worked well enough or cannot be&nbsp;tolerated.</h3>
+		</div>
+	</div>
+</div>
+
+    <div class="body-content">
+        <article>
+            <div class="title-area">
+                <h3>Below you will find a wide array of resources related to UC, CD, and Entyvio for you and your patients.</h3>
+            </div>
+
+            <div class="main-container">
+
+                <!-- Tab starts -->
+                <div class="table" id="table">
+                    <div class="heading-container">
+                        <a href="{{ base_path }}resources/professional-resources#table" class="link">For You</a>
+                        <p class="heading">For Your Patients</p>
+                    </div>
+
+                    <div class="content-container">
+                        <div class="for-your-patient-content">
+                            <h2>Site Resources</h2>
+                            <div class="site-resources">
+
+                                <div>
+                                    <p><a href="https://locator.infusioncenter.org/" data-modal="external_third_party" data-icon="infusion-center" target="_self">Infusion Center Locator</a></p>
+                                    <p><a href="https://www.entyvio.com/" data-modal="external" data-animation="slide" data-icon="patient-site" target="_blank" rel="noreferrer">Entyvio Patient Site</a></p>
+                                </div>
+
+                                <div>
+                                    <p><a href="{{ base_path }}access-support/insurance-support" data-icon="entyvioconnect" target="_self"><em data-ec="">EntyvioConnect</em></a></p>
+                                </div>
+                                <div>
+                                    <p><a href="{{ base_path }}local-coverage" data-icon="coverage-finder" target="_self">Entyvio Coverage Finder</a></p>
+                                </div>
+
+                            </div>
+                            <h2>Downloadable Resources</h2>
+                            <div class="download-resources">
+
+                                <div>
+                                    <p>
+                                        <a href="{{ base_path ~ directory }}/pdf/UC-Treatment-Options-Brochure.pdf" target="_blank">
+                                            Ulcerative Colitis Treatment<br> Options&nbsp;Brochure
+                                            <img class="" src="{{ base_path ~ directory }}/images/icons/download-small.svg" alt="download">
+                                        </a>
+                                    </p>
+
+                                    <p><a href="{{ base_path ~ directory }}/pdf/CD-Treatment-Options-Brochure.pdf" target="_blank">Crohn's Disease Treatment<br> Options&nbsp;Brochure
+                                        <img class="" src="{{ base_path ~ directory }}/images/icons/download-small.svg" alt="download">
+                                        </a>
+                                    </p>
+
+                                </div>
+
+                                <div>
+                                    <p>
+                                        <a href="{{ base_path ~ directory }}/pdf/Entyvio-Patient-Brochure.pdf" target="_blank">
+                                            Entyvio Patient Brochure
+                                            <img class="" src="{{ base_path ~ directory }}/images/icons/download-small.svg" alt="download">
+                                        </a>
+                                    </p>
+                                    <p>
+                                        <a href="{{ base_path ~ directory }}/pdf/Entyvio-Patient-Brochure-Spanish.pdf" target="_blank">
+                                            Entyvio Patient Brochure - Spanish
+                                            <img class="" src="{{ base_path ~ directory }}/images/icons/download-small.svg" alt="download">
+                                        </a>
+                                    </p>
+
+
+                                </div>
+
+                                <div>
+                                    <p>
+                                        <a href="{{ base_path ~ directory }}/pdf/Entyvio-Patient-Infusion-Guide.pdf" target="_blank">
+                                            Entyvio Patient Infusion Guide
+                                            <img class="" src="{{ base_path ~ directory }}/images/icons/download-small.svg" alt="download">
+                                        </a>
+                                    </p>
+
+                                    <p><a href="{{ base_path ~ directory }}/pdf/EntyvioConnect-Patient-Brochure.pdf" target="_blank"><em data-ec="">EntyvioConnect</em> Patient Brochure
+                                          <img class="" src="{{ base_path ~ directory }}/images/icons/download-small.svg" alt="download">
+                                        </a>
+                                    </p>
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- Tab ends -->
+
+
+            </div>
+        </article>
+    </div>
+</div>
+
+
+                <!-- *********************** -->
+                <!-- **** CODE ENDS **** *** -->
+                <!-- *********************** -->
+            </div>
+<div id="isi">
+                <aside class="section">
+	<article>
+		<button class="fixed_isi_trigger" aria-expanded="false" aria-controls="fixed_isi" aria-label="ISI Expand Button">
+            <span></span>
+        </button>
+        <div class="isi-header">
+            <h2>Important Safety Information</h2>
+        </div>
+		<ul>
+			<li>ENTYVIO (vedolizumab) for injection is contraindicated in patients who have had a known serious or severe hypersensitivity reaction to ENTYVIO or any of its excipients.</li>
+
+			<li>Infusion-related reactions and hypersensitivity reactions including anaphylaxis, dyspnea, bronchospasm, urticaria, flushing, rash, and increased blood pressure and heart rate have been reported. These reactions may occur with the first or subsequent infusions and may vary in their time of onset from during infusion or up to several hours post-infusion. If anaphylaxis or other serious infusion-related or hypersensitivity reactions occur, discontinue administration of ENTYVIO immediately and initiate appropriate treatment.</li>
+
+			<li>Patients treated with ENTYVIO are at increased risk for developing infections. Serious infections have been reported in patients treated with ENTYVIO, including anal abscess, sepsis (some fatal), tuberculosis, salmonella sepsis, Listeria meningitis, giardiasis, and cytomegaloviral colitis. ENTYVIO is not recommended in patients with active, severe infections until the infections are controlled. Consider withholding ENTYVIO in patients who develop a severe infection while on treatment with ENTYVIO. Exercise caution in patients with a history of recurring severe infections. Consider screening for tuberculosis (TB) according to the local practice.</li>
+
+			<li>Progressive multifocal leukoencephalopathy (PML), a rare and often fatal opportunistic infection of the central nervous system (CNS), has been reported with systemic immunosuppressants, including another integrin receptor antagonist. PML is caused by the John Cunningham (JC) virus and typically only occurs in patients who are immunocompromised. One case of PML in an ENTYVIO-treated patient with multiple contributory factors has been reported in the postmarketing setting (e.g., human immunodeficiency virus [HIV] infection with a CD4 count of 300 cells/mm<sup>3</sup> and prior and concomitant immunosuppression). Although unlikely, a risk of PML cannot be ruled out. Monitor patients for any new or worsening neurological signs or symptoms. Typical signs and symptoms associated with PML are diverse, progress over days to weeks, and include progressive weakness on one side of the body or clumsiness of limbs, disturbance of vision, and changes in thinking, memory, and orientation leading to confusion and personality changes. If PML is suspected, withhold dosing with ENTYVIO and refer to a neurologist; if confirmed, discontinue ENTYVIO dosing permanently.</li>
+
+			<li>There have been reports of elevations of transaminase and/or bilirubin in patients receiving ENTYVIO. ENTYVIO should be discontinued in patients with jaundice or other evidence of significant liver injury.</li>
+
+			<li>Prior to initiating treatment with ENTYVIO, all patients should be brought up to date with all immunizations according to current immunization guidelines. Patients receiving ENTYVIO may receive non-live vaccines and may receive live vaccines if the benefits outweigh the risks.</li>
+
+			<li>Most common adverse reactions (incidence ≥3% and ≥1% higher than placebo): nasopharyngitis, headache, arthralgia, nausea, pyrexia, upper respiratory tract infection, fatigue, cough, bronchitis, influenza, back pain, rash, pruritus, sinusitis, oropharyngeal pain, and pain in extremities.</li>
+		</ul>
+
+		<h2>Indications</h2>
+		<h3>Adult Ulcerative Colitis (UC)</h3>
+		<p>ENTYVIO (vedolizumab) is indicated in adults for the treatment of moderately to severely active UC.</p>
+
+		<h3>Adult Crohn's Disease (CD)</h3>
+		<p>ENTYVIO (vedolizumab) is indicated in adults for the treatment of moderately to severely active CD.</p>
+
+		<p>Please see <a href="https://general.takedapharm.com/ENTYVIOPI" target="_blank" rel="noreferrer">full Prescribing Information</a>, including <a href="https://general.takedapharm.com/ENTYVIOMG" target="_blank" rel="noreferrer">Medication Guide</a>.</p>
+	</article>
+</aside>
+
+            </div>
